# internal/api/controllers/helper.go
@@ -3,7 +3,7 @@ package controllers
 import (
 	"bobri/internal/models"
 	"context"
-	"fmt"
+	"github.com/georgysavva/scany/v2/pgxscan"
 	"github.com/gin-gonic/gin"
 	"github.com/jackc/pgx/v5/pgxpool"
 	"net/http"
@@ -22,7 +22,7 @@ import (
 // @Failure      400  {object}  models.ErrorResponse        "Некорректный JSON"
 // @Failure      404  {object}  models.ErrorResponse        "Пользователь не найден"
 // @Failure      500  {object}  models.ErrorResponse        "Ошибка при удалении пользователя"
-// @Router       /helper/deleteUser [delete]
+// @Router       /helper/delete_user [delete]
 func DeleteUser(pool *pgxpool.Pool) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var userData models.AuthBookRequest
@@ -72,51 +72,20 @@ func GetStudents(pool *pgxpool.Pool) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var students []models.Student
 
-		// Пытаемся получить payload из JWT Токена
-		payloadInterface, exists := c.Get("userPayload")
-		if !exists {
-			c.JSON(http.StatusInternalServerError,
-				models.ErrorResponse{
-					Error:   "Payload doesn't exist",
-					Message: "Данные о пользователе в JWT Токене (Payload) не найдены",
-				})
-			return
-		}
-
-		// Преобразуем payload в наш тип
-		payload := payloadInterface.(*models.Payload)
-
-		// Используем данные из payload
-		fmt.Printf("User ID: %d\n", payload.Sub)
-		fmt.Printf("Expires at: %d\n", payload.Exp)
-		fmt.Printf("Expires at: %d\n", payload.Iat)
-
 		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
 
 		defer cancel()
 
-		rows, err := pool.Query(ctx, "select id, book_id, surname, name, middle_name, birth_date, student_group from students")
+		err := pgxscan.Select(ctx, pool, &students,
+			"select id, book_id, surname, name, middle_name, birth_date, student_group from students")
 		if err != nil {
 			c.JSON(500, models.ErrorResponse{
 				Error:   err.Error(),
-				Message: "Error while querying students",
+				Message: "Ошибка при получении студентов",
 			})
 			return
 		}
-		defer rows.Close()
 
-		for rows.Next() {
-			var student models.Student
-			err := rows.Scan(&student.Id, &student.BookId, &student.Surname, &student.Name, &student.MiddleName, &student.BirthDate, &student.Group)
-			if err != nil {
-				c.JSON(500, models.ErrorResponse{
-					Error:   err.Error(),
-					Message: "Error while scanning student row",
-				})
-				return
-			}
-			students = append(students, student)
-		}
 		c.JSON(200, students)
 		return
 	}
@@ -139,31 +108,114 @@ func GetUsers(pool *pgxpool.Pool) gin.HandlerFunc {
 		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
 
 		defer cancel()
+		// TODO where level_role < payload.roleLevel
+		err := pgxscan.Select(ctx, pool, &users,
+			"SELECT id, COALESCE(book_id, 0) as book_id, surname, name, middle_name, coalesce(birth_date, '1970-01-01'::timestamp) as birth_date, coalesce(student_group, '') as student_group, password, mail, role_level FROM users")
 
-		rows, err := pool.Query(ctx, "select id, book_id, surname, name, middle_name, birth_date, student_group, password, mail from users")
 		if err != nil {
-			c.JSON(500, models.ErrorResponse{
+			c.JSON(http.StatusInternalServerError, models.ErrorResponse{
 				Error:   err.Error(),
-				Message: "Error while querying students",
+				Message: "Ошибка при сканировании пользователей",
 			})
-			return
 		}
-		defer rows.Close()
 
-		for rows.Next() {
-			var user models.User
-			err := rows.Scan(&user.Id, &user.BookId, &user.Surname, &user.Name, &user.MiddleName, &user.BirthDate, &user.Group, &user.Password, &user.Mail)
-			if err != nil {
-				c.JSON(500, models.ErrorResponse{
-					Error:   err.Error(),
-					Message: "Error while scanning user row",
-				})
-				return
-			}
-			users = append(users, user)
-		}
 		c.JSON(200, users)
 		return
 	}
 
+}
+
+// SetRole @Summary      Установка уровня роли пользователя
+// @Description  Устанавливает уровень роли для указанного пользователя. Требуются права администратора.
+// @Tags         admin
+// @Accept       json
+// @Produce      json
+// @Security     BearerAuth
+// @Param        Authorization  header  string  true  "Bearer токен" default(Bearer <token>)
+// @Param        request  body  models.SetRoleRequest  true  "Данные для установки роли"
+// @Success      200  {object}  models.SetRoleResponse  "Роль успешно установлена"
+// @Failure      400  {object}  models.ErrorResponse    "Некорректный JSON"
+// @Failure      403  {object}  models.ErrorResponse    "Недостаточно прав"
+// @Failure      500  {object}  models.ErrorResponse    "Ошибка сервера"
+// @Router       /helper/set_role [post]
+func SetRole(pool *pgxpool.Pool) gin.HandlerFunc {
+	return func(c *gin.Context) {
+
+		var setRoleRequest models.SetRoleRequest
+		if err := c.ShouldBindJSON(&setRoleRequest); err != nil {
+			c.JSON(400, models.ErrorResponse{
+				Error:   err.Error(),
+				Message: "Error while marshaling JSON",
+			})
+			return
+		}
+
+		payloadInterface, existsPayload := c.Get("userPayload")
+		if !existsPayload {
+			c.JSON(http.StatusInternalServerError,
+				models.ErrorResponse{
+					Error:   "Payload doesn't exist",
+					Message: "Данные о пользователе в JWT Токене (Payload) не найдены",
+				})
+			return
+		}
+
+		// Преобразуем payload в наш тип
+		payload := payloadInterface.(*models.Payload)
+
+		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+		defer cancel()
+
+		var roleLevel int64
+
+		err := pool.QueryRow(ctx, "SELECT role_level FROM users  where id = $1", payload.Sub).Scan(&roleLevel)
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, models.ErrorResponse{
+				Error:   err.Error(),
+				Message: "Не удалось получить роль пользователя",
+			})
+			return
+		}
+
+		var exists bool
+		err = pool.QueryRow(ctx, "SELECT EXISTS(SELECT 1 FROM roles WHERE level = $1)", roleLevel).Scan(&exists)
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, models.ErrorResponse{
+				Error:   err.Error(),
+				Message: "Не удалось проверить наличие роли",
+			})
+			return
+		}
+
+		if roleLevel <= setRoleRequest.RoleLevel {
+			c.JSON(http.StatusForbidden, models.ErrorResponse{
+				Error:   "Forbidden",
+				Message: "Не достаточно прав",
+			})
+			return
+		}
+
+		Tag, err := pool.Exec(ctx, "UPDATE users set role_level = $1 where id = $2", setRoleRequest.RoleLevel, setRoleRequest.UserId)
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, models.ErrorResponse{
+				Error:   err.Error(),
+				Message: "Ошибка при установки роли пользователя",
+			})
+			return
+		}
+		if Tag.RowsAffected() != 1 {
+			c.JSON(http.StatusInternalServerError, models.ErrorResponse{
+				Error:   err.Error(),
+				Message: "Ошибка при установки роли пользователя (RowsAffected != 1)",
+			})
+			return
+		}
+
+		c.JSON(200, models.SetRoleResponse{
+			Successful: true,
+			UserID:     setRoleRequest.UserId,
+			RoleLevel:  setRoleRequest.RoleLevel,
+		})
+		return
+	}
 }
